<resources>
    <string name="app_name">Fuel Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="var">var</string>
    <string name="delete_button">delete</string>
    <string name="add_car_button">add</string>
    <string name="srednie_spalanie">avg fuel consumption per 100 km/mi</string>
    <string name="do_pelna">full tank</string>
    <string name="results_button">Results</string>
    <string name="save_button">save</string>
    <string name="pojazd">car</string>
    <string name="entry_field_km">Mileage</string>
    <string name="new_entry">New entry</string>
    <string name="entry_field_fuel">Tanked quantity</string>
    <string name="new_entry_text">New refuel:</string>
    <string name="del_entry_button">delete</string>
    <string name="date">DATE</string>
    <string name="choose_car">choose car</string>
    <string name="choose_car2">CHOOSE CAR</string>
    <string name="mileage">MILEAGE</string>
    <string name="fuel_quantity">FUEL QUANTITY</string>
    <string name="full">FULL TANK</string>
    <string name="avgcons">AVG</string>
    <string name="enter_data">Enter data</string>
    <string name="car_added">Car added</string>
    <string name="add_car">Add car</string>
    <string name="lower_milage">Mileage lower than last one</string>
    <string name="no_entries">No entries</string>
    <string name="entry_added">Entry added</string>
    <string name="remove_car_question">Do you want to remove that car with all its refuels?</string>
    <string name="entry_nr_1">Car nr</string>
    <string name="entry_nr_2">removed.</string>
    <string name="remove_entry_question">Remove that entry?</string>
    <string name="remove_entry_nr_1">Entry no.</string>
    <string name="remove_entry_nr_2">removed.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>