<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_fuel_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="higheye.fuelcalc.FuelCalcActivity"
    tools:showIn="@layout/activity_fuel_calc">

    <TextView
        android:text="@string/entry_field_fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="24sp"
        android:layout_below="@+id/polePrzebieg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="@string/srednie_spalanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="350dp"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:text="@string/do_pelna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:text="@string/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results"
        android:onClick="showResults"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:onClick="newEntry"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="10"
        android:id="@+id/poleLitry"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/polePrzebieg"
        android:layout_alignStart="@+id/polePrzebieg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/polePrzebieg"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="200dp" />

    <Button
        android:text="@string/pojazd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_button"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/results"
        android:layout_toStartOf="@+id/results"
        android:onClick="chooseCar" />

    <TextView
        android:text="@string/var"
        android:id="@+id/ResultsTextView"
        android:layout_width="match_parent"
        android:textSize="50sp"
        android:elevation="9dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/entry_field_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:layout_marginTop="129dp"
        android:layout_below="@+id/car_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="@string/var"
        android:layout_width="wrap_content"
        android:id="@+id/textViewCar"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/car_button"
        android:layout_toStartOf="@+id/car_button"
        android:layout_height="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_text"
        android:textSize="36sp"
        android:layout_below="@+id/textViewCar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

</RelativeLayout>